--- a/TensorFlow2_practice/ch10_1_creating_dataset.ipynb
+++ b/TensorFlow2_practice/ch10_1_creating_dataset.ipynb
@@ -1,27 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.7.4-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python37464bit2ae39281a9e44a899ce84a46cd7f36a9",
-   "display_name": "Python 3.7.4 64-bit"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
@@ -31,7 +8,10 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "2.0.0\n2.2.4-tf\n"
+     "text": [
+      "2.0.0\n",
+      "2.2.4-tf\n"
+     ]
     }
    ],
    "source": [
@@ -49,7 +29,10 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "(60000, 28, 28)\nuint8\n"
+     "text": [
+      "(60000, 28, 28)\n",
+      "uint8\n"
+     ]
     }
    ],
    "source": [
@@ -85,7 +68,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "'Coat'"
+      "text/plain": [
+       "'Coat'"
+      ]
      },
      "execution_count": 15,
      "metadata": {},
@@ -103,5 +88,28 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "file_extension": ".py",
+  "kernelspec": {
+   "display_name": "Python 3.7.4 64-bit",
+   "language": "python",
+   "name": "python37464bit2ae39281a9e44a899ce84a46cd7f36a9"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "name": "python",
+   "version": "3.7.4-final"
+  },
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
